<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SimpleCalendar!</string>
    <string name="app_name">Registro de Finanças</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_calendario">Calendário</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_cadastro_usuario">Cadastre-se</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="label_cadastro_movimento">Cadastro de Movimento</string>

    <!-- Labels de Cadastro de Movimentos -->
    <string name="label_descricao">Descrição</string>
    <string name="label_data">Data</string>
    <string name="label_valor">Valor</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_fonte">Fonte</string>
    <string name="label_gerenciar_fontes">Gerenciar Fontes</string>

    <!-- Labels Tipo de Movimento -->
    <string name="tipo_movimento_gasto">Gasto</string>
    <string name="tipo_movimento_ganho">Ganho</string>

    <!-- Labels Cadastro de Usuario -->
    <string name="label_nome">Nome</string>
    <string name="label_login">Usuário</string>
    <string name="label_senha">Senha</string>
    <string name="label_confirma_senha">Confirme a senha</string>
    <string name="label_email">E-mail</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="label_processando">Processando</string>

    <!-- Label Fonte Movimento -->
    <string name="label_fonte_descricao">Fonte</string>
    <string name="label_adicionar">Adicionar</string>

    <!-- Labels Menu de Grade -->
    <string name="label_calendario">Calendário</string>
    <string name="label_backup">Backup</string>
    <string name="label_graficos">Gráficos</string>
    <string name="label_categorias">Categorias</string>
    <string name="label_financas">Finanças</string>
    <string name="label_excluir_dados">Excluir Dados</string>
    <string name="label_informacoes">Informações</string>
    <string name="title_activity_financas">FinancasActivity</string>
    <string name="label_erro">Ocorreu um erro no processamento da sua solicitação</string>
    <string name="label_logout">Deslogar</string>
    <string name="title_activity_grafico">GraficoActivity</string>
    <string name="title_activity_graficos">GraficosActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_lista_movimento">ListaMovimentoActivity</string>
    <string name="title_activity_gestao_fontes_movimento">GestaoFontesMovimentoActivity</string>

</resources>
