<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroMovimentoActivity"
    android:orientation="vertical"
     >

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/label_descricao" />
        
        <EditText 
            android:id="@+id/cadastro.txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_descricao"
            android:inputType="text"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/label_tipo" />
        
       <RadioGroup 
           android:id="@+id/tipoMovimento"
           android:layout_width="0dip"
           android:layout_gravity="center_horizontal" 
           android:layout_height="wrap_content"
           android:layout_weight="1" >
        <RadioButton android:id="@+id/radioGasto" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" 
            android:text="@string/tipo_movimento_gasto" />
        <RadioButton android:id="@+id/radioGanho"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/tipo_movimento_ganho" />
    </RadioGroup>
    </LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/label_valor" />
        
        <EditText 
            android:id="@+id/cadastro.txtValor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_valor"
            android:inputType="numberDecimal|"
            android:singleLine="true"
            />
    </LinearLayout>

</LinearLayout>
